Gateway basico: htmls, css y controlador que muestra las vistas

--- a/src/main/resources/static/css/catalogo.css
+++ b/src/main/resources/static/css/catalogo.css
@@ -76,6 +76,9 @@ input, select{
 }
 #buscador_avanzado {
 	display: none;
+	
+	margin-left:430px;
+	font-family: 'Philosopher', sans-serif;
 }
 #filtrado{
 	margin-top: 20px;
