Cosas en gateway y cliente

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -19,7 +19,7 @@
 		</div>
 
 		<div class="jumbotron">
-			<form>
+			<form id="formLogin" action="login" method="post" >
 				<div class="form-group">
 					<label for="exampleInputEmail1">Nombre de usuario</label>
 					<input type="text" class="form-control" id="email" name="email" />
