gateway con la parte de cliente sin admin

--- a/src/main/resources/templates/registro.html
+++ b/src/main/resources/templates/registro.html
@@ -96,15 +96,15 @@
 				</div><br /><br />
 				
 				<fieldset id="personal"><legend>INFORMACIÓN DE USUARIO</legend><br />
-					<p>E-mail:<input type="text" id="email" name="email" class="email form-control" tabindex="1" /><br /><br /></p>
-					<p>Contraseña:<input class="form-control" id="contra1" type="password" name="contra1" tabindex="2" /><br /><br /></p>
-					<p>Confirmación de contraseña:<input class="form-control" id="contra2" type="password" name="contrasena" tabindex="3" /><br /><br /></p>
+					<p>E-mail:<input type="text" id="email" name="correo" class="email form-control" tabindex="1" /><br /><br /></p>
+					<p>Contraseña:<input class="form-control" id="contra1" type="password" name="contrasena" tabindex="2" /><br /><br /></p>
+					<p>Confirmación de contraseña:<input class="form-control" id="contra2" type="password" name="contrasena2" tabindex="3" /><br /><br /></p>
 				</fieldset><br /><br />
 		
 				<fieldset><legend>INFORMACIÓN PERSONAL</legend><br />
-					<p>Nombre de Usuario:<input id="nomusu" class="form-control" type="text" name="nomusu" tabindex="4" /><br /><br /></p>
+					<p>Nombre de Usuario:<input id="nomusu" class="form-control" type="text" name="nombre" tabindex="4" /><br /><br /></p>
 					<p>Apellidos:<input id="apellidos" class="form-control" type="text" name="apellidos" tabindex="5" /><br /><br /></p>
-					<p>Provincia:<input id="prov" class="form-control" type="text" name="prov" tabindex="6" /><br /><br /></p>
+					<p>Provincia:<input id="prov" class="form-control" type="text" name="provincia" tabindex="6" /><br /><br /></p>
 					
 				</fieldset><br /><br />
 				
