--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -22,12 +22,12 @@
 			<form id="formLogin" action="login" method="post" >
 				<div class="form-group">
 					<label for="exampleInputEmail1">Nombre de usuario</label>
-					<input type="text" class="form-control" id="email" name="email" />
+					<input type="text" class="form-control" id="email" name="correo" />
 				</div>
 				
 				<div class="form-group">
 					<label for="exampleInputPassword1">Contraseña</label>
-					<input type="password" class="form-control" id="password" name="password" />
+					<input type="password" class="form-control" id="password" name="contrasena" />
 				</div>
 		
 				<button type="submit" class="btn btn-info">Enviar</button>
