--- a/src/main/resources/static/css/login.css
+++ b/src/main/resources/static/css/login.css
@@ -126,6 +126,11 @@ nav{    /* Estilo del menú*/
 		margin-top:25px;
 }
 
+.header button{
+		float:left;
+		margin-left:10px;
+}
+
 .header h2{   
 		text-align:center;
 		font-family: 'Cinzel', serif;	
