--- a/src/main/resources/templates/catalogo.html
+++ b/src/main/resources/templates/catalogo.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
     <link rel="icon" href="images/icono.ico"/>
@@ -10,7 +10,16 @@
     <link href="css/login.css" rel="stylesheet"/>
     <link href="css/catalogo.css" rel="stylesheet"/>
     <script type="text/javascript">
-     
+
+    function cerrar(){
+    	alert("Acaba de cerrar sesión. Se le redirigirá a la pantalla inicial de la aplicación.");
+    	window.location = "login.html";
+    }
+    
+    function comprar(){
+    	alert("Acaba de enviar una solicitud de compra al propietario del producto.");
+    }
+    
      function formAvanzada() {
     	    var x = document.getElementById('buscador_avanzado');
     	    if (x.style.display === 'none') {
@@ -28,6 +37,7 @@
 			<img src="images/logo.png" alt="Error en la imagen" />
 			<h2 class="text-muted">WALLAPOP</h2>
 			<p>Encuentra tu producto ideal</p>
+			<button class="btn btn-warning" onclick="return cerrar();">Cerrar sesión</button>
 		</div>
 		
 		<nav>  
@@ -83,19 +93,16 @@
 	<br /><br />
 	
 		 <!-- AQUI SE METERIAN TODOS LOS PRODUCTOS DE LA BASE DE DATOS -->
-		 <!--
-		<div class='fav' id='fav1'> 
+		<div class='fav' id='fav1' th:each="producto : ${productos}"> 
 		
-				<h4 class='tituloFav'><%= prod.getTitulo() %></h4>
-				<p><b>Categoria:</b>&nbsp;&nbsp;&nbsp;<span class="categoria"><%= prod.getCategoria() %></span><br><br></p>
-				<p><b>Descripcion:</b>&nbsp;&nbsp;&nbsp;<span class="descripcion"><%= prod.getDescripcion() %></span><br><br></p>
-				<% //<img src="images/cajones.jpg" class="img-circle imagenesProductos" alt="Cajones blancos">%>
-				<p><b>Precio:</b>&nbsp;&nbsp;&nbsp;<span class="precio"><%= prod.getPrecio() %></span><br><br></p>
-				<p><b>Estado:</b>&nbsp;&nbsp;&nbsp;<span class="estado"><%= prod.getEstado() %></span></p>
+				<h4 class='tituloFav' th:text="${producto.titulo}"></h4>
+				<p><b>Categoria:</b>&nbsp;&nbsp;&nbsp;<span class="categoria" th:text="${producto.categoria}"></span><br /><br /></p>
+				<p><b>Descripcion:</b>&nbsp;&nbsp;&nbsp;<span class="descripcion" th:text="${producto.descripcion}"></span><br /><br /></p>
+				 <!--<img src="images/cajones.jpg" class="img-circle imagenesProductos" alt="Cajones blancos">-->
+				<p><b>Precio:</b>&nbsp;&nbsp;&nbsp;<span class="precio" th:text="${producto.precio}"></span><br /><br /></p>
+				<p><b>Estado:</b>&nbsp;&nbsp;&nbsp;<span class="estado" th:text="${producto.estado}"></span></p>
+				<p><button class="btn btn-success" onclick="return comprar();">Comprar</button></p>
 		</div> 
-		
-
-		-->
 		
 		<p>
 		<a class ="btn btn-info" href="javascript:history.go(-1)">Volver</a>
