--- a/src/main/resources/templates/chat.html
+++ b/src/main/resources/templates/chat.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
     <link rel="icon" href="images/icono.ico"/>
@@ -9,6 +9,14 @@
     <!-- Custom styles for this template -->
     <link href="css/login.css" rel="stylesheet"/>
     <link href="css/chat.css" rel="stylesheet"/>
+    <script type="text/javascript">
+    
+    function cerrar(){
+    	alert("Acaba de cerrar sesión. Se le redirigirá a la pantalla inicial de la aplicación.");
+    	window.location = "login.html";
+    }
+    
+    </script>
 </head>
 <body>
 
@@ -17,30 +25,31 @@
 		<img src="images/logo.png" alt="Error en la imagen" />
         <h2 class="text-muted">WALLAPOP</h2>
 		<p>Encuentra tu producto ideal</p>
+		<button class="btn btn-warning" onclick="return cerrar();">Cerrar sesión</button>
       </div>
 		<h3>Lista de mensajes</h3>
 	<table class="tablaLista">
-		<thead>
 
 			<tr>
 				<th>De</th>
 				<th>Mensaje</th>
 			</tr>
-
-		</thead>
-		<tbody>
 			<!-- AQUI SE RECUPERAN LOS MENSAJES DEL USUARIO DE LA BD -->
-		</tbody>
+			<tr th:each="mensaje : ${mensajes}">
+				<td th:text="${mensaje.from}"></td>
+				<td th:text="${mensaje.mensaje}"></td>
+			</tr>
+
 	</table>
 	
-	<form action="mensajes" method="post">
+	<form action="chat" method="post">
 	<fieldset>
 		<legend>CHAT de la aplicación WALLAPOP</legend>
 		<textarea name="mensaje" id="mensaje" cols="30" rows="10"></textarea><br /><br />
 		<p class="destino">Indica el correo del destinatario:&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<input name="to" /></p>
 		<br/>
 		<input class="btn btn-primary enviar" type="submit" value="Enviar" />
-		<input type="hidden"  name="from" value="" />
+		<input type="hidden"  name="from" />
 	</fieldset>
 	</form>
 	<p>
