--- a/src/main/resources/templates/misProductos.html
+++ b/src/main/resources/templates/misProductos.html
@@ -62,7 +62,16 @@
 					<p class='etiqueta'>Si desea modificar o dar de baja un producto pinche en editar.</p>
 					<p class='etiqueta'><button class="anadir btn btn-default" id="anadir" onclick="tabla()">Añadir un nuevo producto.</button></p>
 					
+					<div class='fav' id='fav1' th:each="producto : ${productos}"> 
 					
+							<h4 class='tituloFav' th:text="${producto.titulo}"></h4>
+							<p><b>Categoria:</b>&nbsp;&nbsp;&nbsp;<span class="categoria" th:text="${producto.categoria}"></span><br /><br /></p>
+							<p><b>Descripcion:</b>&nbsp;&nbsp;&nbsp;<span class="descripcion" th:text="${producto.descripcion}"></span><br /><br /></p>
+							 <!--<img src="images/cajones.jpg" class="img-circle imagenesProductos" alt="Cajones blancos">-->
+							<p><b>Precio:</b>&nbsp;&nbsp;&nbsp;<span class="precio" th:text="${producto.precio}"></span><br /><br /></p>
+							<p><b>Estado:</b>&nbsp;&nbsp;&nbsp;<span class="estado" th:text="${producto.estado}"></span></p>
+							<p><a href="editarproducto?id=${producto.id}">Editar</a></p>
+					</div> 
 						
 				
 					 <!-- AQUI SE METERIAN LOS PRODUCTOS DE LA BASE DE DATOS ASOCIADOS AL CLIENTE -->
@@ -93,32 +102,32 @@
 					 
 					<br /><br />
 					
-					<form id="formAlta" method="post" th:action="@{/productos}" th:object="${producto}">
+					<form id="formAlta" method="post" action="addProducto" > <!--  th : action="@{/productos}" th : object="${producto}"> -->
 						<table id="tabla2"> 
 								<tr id="fila1"><td id="celda1"><b>Añade un nuevo producto</b></td></tr> 
 								<tr id="fila2"> 
 								<td><br />
 									<label>Titulo&nbsp;&nbsp;&nbsp;
-										<input type="text" th:field="*{titulo}" class="tituloProducto" /><br /><br /></label>
+										<input type="text" name="titulo"  class="tituloProducto" /><br /><br /></label><!-- th:field="*{titulo}"  -->
 									<label>Categori­a&nbsp;&nbsp;&nbsp;
-										<select class="categoria" th:field="*{categoria}">
-											<option value="Cualquiera" selected="selected">Cualquier categoria</option>
+										<select class="categoria" name="categoria" >
+											<option value="" selected="selected">Cualquier categoria</option>
 											<option value="Mobiliario">Mobiliario</option>
 											<option value="Vehiculos">Vehículos</option>
 											<option value="Moda y belleza">Moda y belleza</option>
 											<option value="Electronica">Electrónica</option>
 											<option value="Ocio">Ocio y deportes</option>
 											<option value="Otros">Otros</option>
-										</select>
+										</select><!-- th:field="*{categoria}" -->
 									<br /><br /></label>
 									<label>Descripcion&nbsp;&nbsp;&nbsp;
-										<input type="text" th:field="*{descripcion}" class="descripcion" id="descripcion4" /><br /><br /></label>
+										<input type="text" name="descripcion" class="descripcion" id="descripcion4" /><br /><br /></label><!-- th:field="*{descripcion}"  -->
 									<!--<label>Imagen&nbsp;&nbsp;&nbsp;
 										<input id="imagen4" th:field="*{imagen}"  type="file" accept="image/*" /><br /><br /></label>-->
 									<label>Precio&nbsp;&nbsp;&nbsp;
-										<input type="text" th:field="*{precio}" class="precio" id="precio4" /><br /><br /></label>
+										<input type="text" name="precio" class="precio" id="precio4" /><br /><br /></label><!--  th:field="*{precio}" -->
 									<label>Estado&nbsp;&nbsp;&nbsp;
-										<input type="text" name="estado"  class="estado" id="estado4" th:value="Disponible" readonly="readonly" /><br/><br /></label>
+										<input type="text" name="estado"  class="estado" id="estado4" readonly="readonly" th:value="Disponible" /><br/><br /></label><!--   -->
 									<label>
 										<button type="submit" class='validar btn btn-info' id='validar'>Añadir</button></label><br />
 								</td>   
