--- a/src/main/resources/templates/catalogo.html
+++ b/src/main/resources/templates/catalogo.html
@@ -13,7 +13,7 @@
 
     function cerrar(){
     	alert("Acaba de cerrar sesión. Se le redirigirá a la pantalla inicial de la aplicación.");
-    	window.location = "login.html";
+    	window.location = "login";
     }
     
     function comprar(){
