--- a/src/main/resources/templates/inicioCliente.html
+++ b/src/main/resources/templates/inicioCliente.html
@@ -82,14 +82,14 @@
 		<th></th>
 		</tr>
 		<tr>
-			<td><img src="images/cajones.jpg" class="imagenesProductos" alt="Cajones blancos" /></td>
-			<td><img src="images/bici.jpg" class="imagenesProductos" alt="Bicicleta" /></td>
-			<td><img src="images/sofa.jpg" class="imagenesProductos" alt="Sofa de esquina" /></td>
+			<td><a href="catalogo"><img src="images/cajones.jpg" class="imagenesProductos" alt="Cajones blancos" /></a></td>
+			<td><a href="catalogo"><img src="images/bici.jpg" class="imagenesProductos" alt="Bicicleta" /></a></td>
+			<td><a href="catalogo"><img src="images/sofa.jpg" class="imagenesProductos" alt="Sofa de esquina" /></a></td>
 		</tr>
 		<tr>
-			<td><img src="images/iphone.JPG" class="imagenesProductos" alt="Iphone" /></td>
-			<td><img src="images/bolso.jpg" class="imagenesProductos" alt="Bolso" /></td>
-			<td><img src="images/cachimba.jpg" class="imagenesProductos" alt="Cachimba" /></td>
+			<td><a href="catalogo"><img src="images/iphone.JPG" class="imagenesProductos" alt="Iphone" /></a></td>
+			<td><a href="catalogo"><img src="images/bolso.jpg" class="imagenesProductos" alt="Bolso" /></a></td>
+			<td><a href="catalogo"><img src="images/cachimba.jpg" class="imagenesProductos" alt="Cachimba" /></a></td>
 		</tr>
 	</table>
 	
