--- a/src/main/resources/static/css/login.css
+++ b/src/main/resources/static/css/login.css
@@ -43,7 +43,7 @@ body {
 /* Customize container */
 @media (min-width: 768px) {
   .container {
-    max-width: 730px;
+    max-width: 850px;
   }
 }
 .container-narrow > hr {
@@ -127,8 +127,8 @@ nav{    /* Estilo del menú*/
 }
 
 .header button{
-		float:left;
-		margin-left:10px;
+		float:right;
+		margin-top:-80px;
 }
 
 .header h2{   
