--- a/src/main/resources/templates/inicioCliente.html
+++ b/src/main/resources/templates/inicioCliente.html
@@ -50,7 +50,7 @@
           <img class="img-circle" src="images/perfil.png" alt="Generic placeholder image" width="140" height="140" />
           <h3>Visita tu perfil</h3><br />
           <p>Accede a tu perfil. Podrás modificar tu información de usuario o de tus productos, así como dar de alta un producto que quieras vender.</p>
-          <p><a class="btn btn-primary" href="miUsuario" role="button">Mi perfil &raquo;</a></p>
+          <p><a class="btn btn-primary" href="perfil" role="button">Mi perfil &raquo;</a></p>
           <p><a class="btn btn-primary" href="productos" role="button">Mis productos &raquo;</a></p>
         </div><!-- /.col-lg-4 -->
         <div class="col-lg-4">
